# noCodeDapp-main

./: Cargo.toml  README.md  package.json
client/: accounts.ts  connection.ts  get_data.ts  models.ts  service.ts  utils.ts
src/: confirmdata.rs  createdata.rs  createrole.rs  datafield.rs  datastates.rs  entrypoint.rs  enums.rs  error.rs  initialize.rs  lib.rs  modifydata.rs  rolestates.rs  state.rs
