[package]
name = "noCodeDapp-main"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.18.14"
borsh = "0.9.1"
borsh-derive = "0.9.1"
thiserror = "1.0.24"
spl-token-2022 = {version="1.0.0",features=["no-entrypoint"]}
spl-token = {version="3.1.1",features=["no-entrypoint"]}
spl-associated-token-account = { version = "2.3.0", features = ["no-entrypoint"] }

[lib]
name = "nocodedapp"
crate-type = ["cdylib", "lib"]